--- a/package.json
+++ b/package.json
@@ -14,9 +14,15 @@
   },
   "homepage": "https://github.com/wngus6429/YoutubeMake#readme",
   "dependencies": {
+    "@babel/core": "^7.8.3",
+    "@babel/node": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
     "express": "^4.17.1"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "nodemon --exec babel-node index.js"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.2"
   }
 }
