--- a/package.json
+++ b/package.json
@@ -19,17 +19,23 @@
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
+    "eslint-config-prettier": "^6.10.0",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "mongoose": "^5.8.11",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
+    "prettier": "^1.19.1",
     "pug": "^2.0.4"
   },
   "scripts": {
     "start": "nodemon --exec babel-node init.js --delay 2"
   },
   "devDependencies": {
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.20.1",
     "nodemon": "^2.0.2"
   }
 }
