--- a/package.json
+++ b/package.json
@@ -22,15 +22,20 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "express": "^4.17.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "helmet": "^3.21.2",
     "mongoose": "^5.8.11",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "prettier": "^1.19.1",
-    "pug": "^2.0.4"
+    "pug": "^2.0.4",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node init.js --delay 2"
+    "dev:server": "nodemon --exec babel-node init.js --delay 2",
+    "dev:assets": "WEBPACK_ENV=development webpack",
+    "build:assets": "WEBPACK_ENV=production webpack"
   },
   "devDependencies": {
     "eslint-config-airbnb-base": "^14.0.0",
