--- a/package.json
+++ b/package.json
@@ -16,31 +16,37 @@
     "@babel/core": "^7.8.3",
     "@babel/node": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
+    "autoprefixer": "^9.7.4",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
+    "css-loader": "^3.4.2",
     "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "express": "^4.17.1",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "helmet": "^3.21.2",
     "mongoose": "^5.8.11",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
+    "node-sass": "^4.13.1",
+    "postcss-loader": "^3.0.0",
     "prettier": "^1.19.1",
     "pug": "^2.0.4",
+    "sass-loader": "^8.0.2",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
   },
   "scripts": {
     "dev:server": "nodemon --exec babel-node init.js --delay 2",
-    "dev:assets": "WEBPACK_ENV=development webpack",
+    "dev:assets": "cross-env WEBPACK_ENV=development webpack",
     "build:assets": "WEBPACK_ENV=production webpack"
   },
   "devDependencies": {
+    "cross-env": "^7.0.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-prettier": "^3.1.2",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "nodemon": "^2.0.2"
   }
 }
